--- a/README.adoc
+++ b/README.adoc
@@ -79,9 +79,8 @@ toc::[]
 Смотрят стингеры через центр базы на кросс-партнёра, или то место, где
 он должен быть (по прямой через центр формации).
 
-Стингеры презентуют руку другим стингерам, рука должна быть жесткой и
-максимально неподвижной, что бы следующим стингерам было легко её взять.
-Помогает сжать руку в кулак.
+Стингеры презентуют руку другим стингерам, рука должна быть жесткой и максимально неподвижной
+(помогает сжать руку в кулак), что бы следующим стингерам было легко взять захват.
 
 === Под
 
