--- a/README.adoc
+++ b/README.adoc
@@ -85,7 +85,8 @@ toc::[]
 === Под
 
 Часть формации, состоящая из стингеров и под-клозера. _Под_ представляет
-собой замкнутое кольцо, из человека в базе, стингеров и под-клозера.
+собой замкнутое кольцо из человека в базе, стингеров и под-клозера.
+
 _Под_ строится на человека в базе за его спиной!
 
 То есть, под получится только в том случае, если первые стингеры
