--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,6 @@
-= Построение вертикальных формаций: FAQ :toc: macro :toc-title: Содержание 
+= Построение вертикальных формаций: FAQ 
+:toc: macro
+:toc-title: Содержание 
 
 toc::[]
 
