--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,7 @@ toc::[]
 
 *NOTE:* Захват берётся сверху.
 
-Стингер должен помогать базе сохранять стабильность, и ускорять её.
+Стингер должен помогать базе сохранять стабильность и ускорять её.
 Помните, что чем больше людей в формации, тем сильнее она замедляется.
 
 В формациях хэддаун стингер должен висеть ниже уровня базы, и каждый
