--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,7 @@ toc::[]
 
 == Роли в формации
 
+image::formation-roles.png[]
 
 === База
 
@@ -388,7 +389,7 @@ image::formation-roles-exit.svg[]
 
 Поэтому с таких высот прыгают с кислородом, который разводится по салону при помощи "медицинских"
 ПВХ труб. Перед подъемом следует убедиться, что кислород нормально подаётся на том месте, где вы
-сидите в ЛА. Полезно иметь отрезок трубки для индивидуального пользования, и спиртовую салфетку
+сидите в ЛА. Полезно иметь отрезок трубки для индивидуального пользования и спиртовую салфетку
 для протирки.
 
 При наборе высоты следует избегать резких движений и вообще минимизировать их количество.
