--- a/README.adoc
+++ b/README.adoc
@@ -319,7 +319,7 @@ image::formation-roles-exit.svg[]
 Разбежка выполняется в соответствии с оговорённым планом прыжка, включая
 высоты, количество волн/групп разбежки, наличие уводящих и так далее.
 
-В целом для финальной стадии разбежки изнутри своей группы (может быть
+В целом для финальной стадии разбежки из своей группы (может быть
 как небольшая формация, так и целый под/группа) следует:
 
 [arabic]
