--- a/README.adoc
+++ b/README.adoc
@@ -426,7 +426,7 @@ image::formation-roles-exit.svg[]
 
 Нет позиций лучше или хуже. В каждой есть свои сложные стороны и своя
 ответственность. Рекорд засчитывается только в том случае, если все
-сделали свою работу. В рекорде люди на позиции определяются в
+сделали свою работу. В рекорде люди на позицию определяются в
 зависимости от того, насколько хорошо они с ней справляются.
 
 Если формация — учебно-тренировочная, следует пользоваться
