--- a/README.adoc
+++ b/README.adoc
@@ -85,7 +85,7 @@ image::formation-roles.png[]
 он должен быть (по прямой через центр формации).
 
 Стингеры презентуют руку другим стингерам, рука должна быть жесткой и максимально неподвижной
-(помогает сжать руку в кулак), что бы следующим стингерам было легко взять захват.
+(помогает сжать кисть в кулак), что бы следующим стингерам было легко взять захват.
 
 === Под
 
