--- a/README.adoc
+++ b/README.adoc
@@ -360,7 +360,7 @@ image::formation-roles-exit.svg[]
 прямой или боковым скольжением, визируя пространство в направлении
 движения и не допуская столкновений.
 
-Запрешено резко вспухать, например, в случае хэддаун формации в сит или
+Запрещено резко вспухать, например, в случае хэддаун формации в сит или
 тем более на живот. Это недопустимо.
 
 Разбежка выполняется на заданной высоте в соответствии с планом.
