--- a/README.adoc
+++ b/README.adoc
@@ -63,7 +63,7 @@ image::formation-roles.png[]
 компактно, оказывая минимальное воздействие на базу, отыгрывая
 воздействия, которые оказываются на самого стингера другими участниками.
 
-*NOTE:* Захват берётся сверху.
+*NOTE:* Захват за базу берётся стингером сверху.
 
 Стингер должен помогать базе сохранять стабильность и ускорять её.
 Помните, что чем больше людей в формации, тем сильнее она замедляется.
